--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   
 
 
-  <title>Coder Kill Words</title>
+  <title>Kill The Words</title>
   
   <link rel="stylesheet" href="css/1.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
